[优化] 重构建库主流程并切换Tai-e调用图